--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@vitejs/plugin-vue": "^5.1.4",
         "flowbite": "^2.5.1",
         "flowbite-vue": "^0.1.6",
+        "lodash": "^4.17.21",
         "pinia": "^2.2.2",
         "vue": "^3.5.6",
         "vue-router": "^4.4.5"
