feat(fix): fix the axios config for consume api wilayah indonesia

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -11,10 +11,22 @@ server {
 
     charset utf-8;
 
+    # Add CORS headers
     location / {
         root /var/www/public;
         index  index.html index.php;
         try_files $uri $uri/ /index.php?$query_string;
+
+        add_header 'Access-Control-Allow-Origin' '*'; # Allow all origins
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Content-Type, Accept, X-Requested-With';
+
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Content-Type, Accept, X-Requested-With';
+            return 204; # Return empty 204 response for OPTIONS requests
+        }
     }
 
     location ~ \.php$ {
